src/test/deca/codegen/valid/black-box/decl_float.deca
{
    float f;
    f = 1.0f;
    println(f);
    f = f + 1;
    println(f);
}