src/test/deca/codegen/invalid/oracle/float_too_big.deca
{
    float f = 10E+10000; /* Essayer de faire plus précis */
}